Migrate mod from NeoForge to Forge
Port build and runtime code from NeoForge to standard Forge tooling and APIs. Updates include:

- Replace net.neoforged build setup with ForgeGradle: change plugins, mappings, runs, repositories, archivesName, Java toolchain (to 17), and Gradle wrapper (8.8). Update gradle.properties for Minecraft/Forge versions and loader range.
- Update resource/data paths and processResources to expand META-INF/mods.toml.
- Swap NeoForge/Neoforged APIs for Forge equivalents across code: use FMLJavaModLoadingContext, ModLoadingContext, MinecraftForge.EVENT_BUS, Forge event classes, MenuScreens, and Forge config (ForgeConfigSpec).
- Update network usage to use ModNetwork.CHANNEL and register payload handlers; register mod objects on the Forge mod event bus.
- Add a client config screen (EmeraldPouchConfigScreen) and register it via ConfigScreenHandler.
- Introduce setters and save() to client config and switch config storage to ForgeConfigSpec.
- Change various event handler signatures and logic to match Forge event semantics (auto-pickup, merchant trade, client tick/render/screen/input handlers, etc.).
- Replace or stub out integrations for external slot mods (Curios/Accessories) to safe no-op implementations when compat APIs are not present.
- Add utility StackHelper and update imports/usages throughout the code.

These changes migrate the project away from NeoForge-specific tooling and adapt it to standard Forge development conventions and runtime.